# equailizer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json  eq-config.example.json
.cargo/: config.toml
docs/: plugin-api.md
equailizer-plugin/: Cargo.toml
equailizer-plugin/src/: context.rs  events.rs  lib.rs  plugin.rs  protocol.rs  runner.rs
src/: cli.rs  config.rs  date_helpers.rs  email.rs  error.rs  issue.rs  lib.rs  log.rs  main.rs  persist.rs  usd.rs
src/commands/: create_batch.rs  create_batch2.rs  mod.rs  reconcile.rs
src/commands/c_b/: create_actions.rs  create_updates.rs  mod.rs  process_tags.rs
src/commands/create_batch/: create_updates.rs  process_tags.rs
src/lunch_money/api/: get_transactions.rs  mod.rs  update_transaction.rs
src/lunch_money/model/: transaction.rs
src/plugin/: mod.rs  protocol.rs
templates/: batch_ready_creditor_email.html  batch_ready_debtor_email.html  batch_ready_email.html
tests/: create_batch.rs  email.rs  reconcile.rs  tests.rs
tests/support/: builders.rs  mocks.rs  mod.rs
