[package]
edition = "2024"
name = "equailizer"
version = "0.1.0"

[dependencies]
askama = "0.14"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
display_json = "0.2"
jmap-client = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls-native-roots",
] }
rust_decimal = { version = "1.37", features = ["macros", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2" # for rolling file + non-blocking writer
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }
uuid = { version = "1.18", features = ["v4"] }
